--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    <link rel="stylesheet" href="https://Amazon/cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Amazon/styles.css">
 </head>
 
 <body>
@@ -79,28 +79,28 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Health & Personel Care</h2>
-                <div class="box-image" style="background-image:url('box1_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box1_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
                 <h2>Clothes</h2>
-                <div class="box-image" style="background-image:url('box2_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box2_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-image" style="background-image:url('box3_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box3_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
                 <h2>Electronics</h2>
-                <div class="box-image" style="background-image:url('box4_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box4_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -111,7 +111,7 @@
         <div class="box5 box">
             <div class="box-content">
                 <h2>Make-Up</h2>
-                <div class="box-image" style="background-image:url('box5_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box5_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -119,7 +119,7 @@
         <div class="box6 box">
             <div class="box-content">
                 <h2>Pet Care</h2>
-                <div class="box-image" style="background-image:url('box6_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box6_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -127,7 +127,7 @@
         <div class="box7 box">
             <div class="box-content">
                 <h2>New Arrival in Toys</h2>
-                <div class="box-image" style="background-image:url('box7_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box7_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -135,7 +135,7 @@
         <div class="box8 box">
             <div class="box-content">
                 <h2>Discover Fashion Trends</h2>
-                <div class="box-image" style="background-image:url('box8_image.jpg')"></div>
+                <div class="box-image" style="background-image:url('Amazon/box8_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
